--- a/MISA.EMIS.MF734.PVTHANG.frontend/src/styles/basics/button.css
+++ b/MISA.EMIS.MF734.PVTHANG.frontend/src/styles/basics/button.css
@@ -1,3 +1,4 @@
+/* created by Phạm Việt Thắng (20/02/2021) */
 .m-button {
     display: flex;
     align-items: center;
@@ -28,6 +29,7 @@
         margin-left: 8px;
     }
 
+/* created by Phạm Việt Thắng (20/02/2021) */
 .m-second-button {
     border: 1px solid #bbbbbb;
     background-color: #ffffff;
@@ -45,6 +47,8 @@
         background-color: #e9ebee;
     }
 
+/*button chỉ chứa 1 icon
+ created by Phạm Việt Thắng (20/02/2021) */
 .m-icon-button {
     border: 1px solid #bbbbbb;
     background-color: #ffffff;
