--- a/MISA.EMIS.MF734.PVTHANG.frontend/src/styles/basics/input.css
+++ b/MISA.EMIS.MF734.PVTHANG.frontend/src/styles/basics/input.css
@@ -1,3 +1,5 @@
+/* created by Phạm Việt Thắng (20/02/2021) */
+
 .m-input {
     width: calc(100% - 24px - 2px);
     height: 30px;
@@ -57,6 +59,8 @@ input[type="checkbox"] {
         background-image: url('../../assets/ImagesIcons/ic_Checkbox_Inactive.svg');
     }
     
+    /* checkbox bị đảo ngược giá trị
+    created by Phạm Việt Thắng (20/02/2021) */
     input[type="checkbox"] + label span.m-switch-input{
         width: 28px;
         background: url('../../assets/ImagesIcons/ic_Switch_Inactive.svg') no-repeat center;
@@ -65,7 +69,7 @@ input[type="checkbox"] {
     input[type="checkbox"]:checked + label span.m-switch-input{
         background: url('../../assets/ImagesIcons/ic_Switch_Inactive.svg') no-repeat center;
     }
-
+    /* created by Phạm Việt Thắng (20/02/2021) */
 input[type="radio"] {
     width: 0;
     height: 0;
@@ -79,6 +83,7 @@ input[type="radio"] {
     }
 
     input[type="radio"] + label span{
+
         display: inline-block;
         width: 20px;
         height: 20px;
@@ -93,6 +98,7 @@ input[type="radio"] {
         background-image: url('../../assets/ImagesIcons/ic_Ratio_Active.svg');
     }
 
+    /* created by Phạm Việt Thắng (20/02/2021) */
 input[type=number]::-webkit-inner-spin-button { 
     -webkit-appearance: none;
     -moz-appearance: none;
